--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edu-Aspirants</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="Images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <div class="container main flex">
             <div class="left">
                 <a href="#">
-                    <img src="./Images/Aspirants.png" alt="">
+                    <img src = "Aspirants.png" alt="">
                 </a>
             </div>
             <div class="right">
@@ -52,7 +52,7 @@
                 <a href="#" class="primary-button gsb">Get Started</a>
             </div>
             <div class="hright">
-                <img src="./Images/start.png" alt="">
+                <img src="start.png" alt="">
             </div>
         </div>
     </header>
@@ -64,13 +64,13 @@
                 The world’s best companies associated with our smart learning community.
             </div>
             <div class="logos flex">
-                <img class="logo" src="./Images/asset 3.png" alt="">
-                <img class="logo" src="./Images/asset 4.png" alt="">
-                <img class="logo" src="./Images/asset 5.png" alt="">
-                <img class="logo" src="./Images/asset 6.png" alt="">
-                <img class="logo" src="./Images/asset 7.png" alt="">
-                <img class="logo" src="./Images/asset 8.svg" alt="">
-                <img class="logo" src="./Images/asset 9.svg" alt="">
+                <img class="logo" src="asset 3.png" alt="">
+                <img class="logo" src="asset 4.png" alt="">
+                <img class="logo" src="asset 5.png" alt="">
+                <img class="logo" src="asset 6.png" alt="">
+                <img class="logo" src="asset 7.png" alt="">
+                <img class="logo" src="asset 8.svg" alt="">
+                <img class="logo" src="asset 9.svg" alt="">
             </div>
         </div>
     </section>
@@ -84,37 +84,37 @@
             </div>
             <div class="feature-area flex">
                 <div class="card flex">
-                    <img src="./Images/asset 11.svg" alt="">
+                    <img src="asset 11.svg" alt="">
                     <h3>Web Development</h3>
                     <p>Learn to build fully functional web applications.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="./Images/asset 13.svg" alt="">
+                    <img src="asset 13.svg" alt="">
                     <h3>Data structures and algorithms</h3>
                     <p>Basic foundation of coding in Java/Python/C++.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class = "card flex">
-                    <img src = "./Images/asset 14.svg" alt="">
+                    <img src = "asset 14.svg" alt="">
                     <h3>Android Development</h3>
                     <p>Learn to build fully functional android applications.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="./Images/asset 15.svg" alt="">
+                    <img src="asset 15.svg" alt="">
                     <h3>Competitive Programming</h3>
                     <p>Learn to write most efficient programmes.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="./Images/asset 16.svg" alt="">
+                    <img src="asset 16.svg" alt="">
                     <h3>Data Science</h3>
                     <p>Data Visualisation and Data Analysis to gain actionable insights out of gigabytes of data using various statistical techniques.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-arrow-right-long"></i></a>
                 </div>
                 <div class="card flex">
-                    <img src="./Images/asset 17.svg" alt="">
+                    <img src="asset 17.svg" alt="">
                     <h3>Machine Learning</h3>
                     <p>Learn to build Classification, Regression, NLP and deep learning models to analyse the patterns in given data.</p>
                     <a href="#" class="secondary-button">Learn more <i class="fa-solid fa-arrow-right-long"></i></a>
@@ -128,7 +128,7 @@
     <section class="big-feature">
         <div class="container flex big-feature-section">
             <div class="feature-img">
-                <img src="./Images/asset 18.png" alt="">
+                <img src="asset 18.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Boost your career with our</h4>
@@ -141,7 +141,7 @@
     <section class="big-feature">
         <div class="container flex big-feature-section" style="flex-direction: row-reverse ;">
             <div class="feature-img">
-                <img src="./Images/asset 21.png" alt="">
+                <img src="asset 21.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Join our</h4>
@@ -154,7 +154,7 @@
     <section class="big-feature">
         <div class="container flex big-feature-section">
             <div class="feature-img">
-                <img src="./Images/asset 24.png" alt="">
+                <img src="asset 24.png" alt="">
             </div>
             <div class="feature-desc flex">
                 <h4>Roadmaps and Mentorship</h4>
@@ -174,19 +174,19 @@
             </div>
             <div class="example-area flex">
                 <a href="#" class="example-card"
-                    style="background:linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./Images/asset\ 34.jpeg) ; background-size: cover;">
+                    style="background:linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./asset\ 34.jpeg) ; background-size: cover;">
                     <h3>Can users complete a task in my software interface?</h3>
                 </a>
                 <a href="#" class="example-card"
-                    style="background:linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./Images/asset\ 35.jpeg); background-size: cover;">
+                    style="background:linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./asset\ 35.jpeg); background-size: cover;">
                     <h3>Can users complete a task in my software interface?</h3>
                 </a>
                 <a href="#" class="example-card"
-                    style="background:linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./Images/asset\ 36.jpeg); background-size: cover;">
+                    style="background:linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./asset\ 36.jpeg); background-size: cover;">
                     <h3>Can users complete a task in my software interface?</h3>
                 </a>
                 <a href="#" class="example-card"
-                    style="background:linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./Images/asset\ 37.jpeg) ;background-size: cover;">
+                    style="background:linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(./asset\ 37.jpeg) ;background-size: cover;">
                     <h3>Can users complete a task in my software interface?</h3>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                 <a href="#" class="primary-button psb">Learn more</a>
             </div>
             <div class="ctaright">
-                <img src="./Images/asset 38.png" alt="">
+                <img src="asset 38.png" alt="">
             </div>
         </div>
     </section>
