--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <footer>
         <div class="container flex footer-section">
             <a href="#" class="company-logo">
-                <img src="./Images/Aspirants.png" alt="">
+                <img src="Aspirants.png" alt="">
             </a>
             <div class="link-column flex">
                 <h4>Home</h4>
