--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edu-Aspirants</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="utils.css">
     <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
 </head>
 
@@ -27,15 +28,15 @@
         <div class="container main flex">
             <div class="left">
                 <a href="#">
-                    <img src = "Aspirants.png" alt="">
+                    <img src="Aspirants.png" alt="">
                 </a>
             </div>
             <div class="right">
                 <ul class="flex">
-                    <li><a href="#" class="hover-links">Home</a></li>
-                    <li><a href="#" class="hover-links">Communities</a></li>
-                    <li><a href="#" class="hover-links">Events</a></li>
-                    <li><a href="#" class="hover-links">Roadmaps</a></li>
+                    <li><a href="#" class="hover-links small-text">Home</a></li>
+                    <li><a href="#" class="hover-links small-text">Communities</a></li>
+                    <li><a href="#" class="hover-links small-text">Events</a></li>
+                    <li><a href="#" class="hover-links small-text">Roadmaps</a></li>
                     <li><a href="#" class="hover-links secondary-button">Sign in</a></li>
                     <li><a href="#" class="hover-links primary-button">Sign up</a></li>
                 </ul>
@@ -139,7 +140,7 @@
         </div>
     </section>
     <section class="big-feature">
-        <div class="container flex big-feature-section" style="flex-direction: row-reverse ;">
+        <div class="container flex big-feature-section bfs" style="flex-direction: row-reverse ;">
             <div class="feature-img">
                 <img src="asset 21.png" alt="">
             </div>
