--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
     </section>
     <section class="big-feature">
-        <div class="container flex big-feature-section bfs" style="flex-direction: row-reverse ;">
+        <div class="container flex big-feature-section bfs">
             <div class="feature-img">
                 <img src="asset 21.png" alt="">
             </div>
